# The-Document_Intelligence_Refinery

./: Dockerfile  Readme.md  config.yaml  pyproject.toml
.refinery/: Extraction_ledger.jsonl
.refinery/PageIndex/: Annual_Report_2019.json  Audit_Findings_2013.json  Audited_Financial_Statement_2018.json  Audited_Financial_Statement_2020.json  CPI_August_2025.json  E.C_Budget_2013.json  Procurement_Info_2013.json  Security_Vulnerability_Procedure_1.json  Security_Vulnerability_Procedure_2.json
.refinery/Profiles/: 0043fbd7-0c94-4317-ae1d-dde1c518affc.json  0046ca1a-764a-4024-ad24-ab0c9fc7ea11.json  01025c6f-0454-464e-9743-b2ffec4e2f61.json  03d1b386-3880-4519-b90d-0ed4a37d0222.json  050544f3-3341-4413-8df4-fff3b77aa3e6.json  064f5f97-60cf-4f9a-bac1-c94c925e21c4.json  07037368-766c-433a-b832-88b2db9ba89d.json  0a5d435e-216b-4321-be7f-6643fd69ee68.json  0c9754bb-5ef6-4bfe-8d0a-27e7e38c0652.json  0ca37f79-3663-4647-a49d-4ee1e0f98907.json  11e10f9e-b73f-430c-97cb-af0c4c090b7d.json  11f29d7a-d431-4f5e-b0cd-0dc72f548eb0.json  14248fa7-8c4a-4b69-bafc-cc8e21533a90.json  16c80ab4-344f-4e61-9c83-458131189aad.json  1a0f55d2-2000-4b65-b2ff-b3d2e17720b6.json  1b63fc16-a0a4-46de-9f6b-705ad1ef0017.json  213911f4-a126-4e87-86e0-18627bd9ccba.json  234d8adc-efd1-41d8-841c-52019c9f07b4.json  (+129 more)
docs/: DOMAIN_NOTES.md  architecture.md  cost_analysis.md  qa_examples.md
rubric/: extract_rules.yaml
scripts/: generate_profiles.py
src/: config.py  main.py
src/agents/: chunker.py  (+4 more)
test/: test_chunking_rules.py  test_confidence.py  test_pageindex.py  test_triage.py  test_validators.py
(+27 files in other folders)
