[project]
name = "document-intelligence-refinery"
version = "0.1.0"
description = "Agentic pipeline for structured document intelligence with provenance"
requires-python = ">=3.10"

dependencies = [
  "pydantic>=2.6",
  "pdfplumber>=0.11",
  "pymupdf>=1.23",
  "pyyaml>=6.0",
  "rich>=13.7"
]

[tool.pytest.ini_options]
testpaths = ["tests"]