[project]
name = "document-intelligence-refinery"
version = "0.1.0"
description = "Agentic pipeline for structured document intelligence with provenance"
requires-python = ">=3.10"

dependencies = [
  "pydantic>=2.6",
  "pdfplumber>=0.11",
  "pymupdf>=1.23",
  "pyyaml>=6.0",
  "rich>=13.7",
  "numpy>=1.24"
]

[project.optional-dependencies]
chromadb = ["chromadb>=0.4.0"]
faiss = ["faiss-cpu>=1.7"]
all = ["chromadb>=0.4.0", "faiss-cpu>=1.7"]

[tool.pytest.ini_options]
testpaths = ["tests"]